--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
-      <p><a href="http://127.0.0.1:5500/" rel="nofollow">Covid tracker</a></p>
+      <p><a href="https://covidtrackerfrompoom.netlify.app/" rel="nofollow">Covid tracker</a></p>
     </div>
   </div>
 </div>
