--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li> <a class="page-scroll" href="#about">About</a> </li>
           <li> <a class="page-scroll" href="#skills">Skills</a> </li>
           <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
-          <li> <a class="page-scroll" href="#resume">Resume</a> </li>
+          <li> <a class="page-scroll" href="https://drive.google.com/file/d/1q_r9HSsBNK7cdtXi6CM163vpnPqtNEeN/view?usp=sharing">Resume</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact</a> </li>
         </ul>
       </div>
@@ -84,7 +84,7 @@
         <div class="about-text">
           <p>Hi I'm Neramit Meearyasit ,you can call me Poom ,22 years old</p>
           <p>I graduated in Science major Computer Science from King Mongkut's Institute of Technology Ladkrabang</p>
-          <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Download Resume</a></p>
+          <p class="text-center"><a class="btn btn-primary" href="https://drive.google.com/file/d/1q_r9HSsBNK7cdtXi6CM163vpnPqtNEeN/view?usp=sharing"><i class="fa fa-download"></i> Download Resume</a></p>
         </div>
       </div>
     </div>
